Finish model & create migrations

--- a/Howest.Movies.Data/Howest.Movies.Data.csproj
+++ b/Howest.Movies.Data/Howest.Movies.Data.csproj
@@ -12,4 +12,8 @@
       <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Howest.Movies.Models\Howest.Movies.Models.csproj" />
+    </ItemGroup>
+
 </Project>
