--- a/Howest.Movies.WebApi/Howest.Movies.WebApi.csproj
+++ b/Howest.Movies.WebApi/Howest.Movies.WebApi.csproj
@@ -26,7 +26,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Howest.Movies.AccessLayer\Howest.Movies.AccessLayer.csproj" />
       <ProjectReference Include="..\Howest.Movies.Data\Howest.Movies.Data.csproj" />
+      <ProjectReference Include="..\Howest.Movies.Dtos\Howest.Movies.Dtos.csproj" />
     </ItemGroup>
 
 </Project>
