--- a/Howest.Movies.AccessLayer/Howest.Movies.AccessLayer.csproj
+++ b/Howest.Movies.AccessLayer/Howest.Movies.AccessLayer.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="13.0.1" />
+      <PackageReference Include="SixLabors.ImageSharp" Version="3.1.4" />
     </ItemGroup>
 
 </Project>
