--- a/Howest.Movies.Sdk/Howest.Movies.Sdk.csproj
+++ b/Howest.Movies.Sdk/Howest.Movies.Sdk.csproj
@@ -13,10 +13,8 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
       <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.0" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Settings\" />
+      <PackageReference Include="MudBlazor" Version="6.19.1" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
 </Project>
