--- a/Howest.Movies.WebApp/Howest.Movies.WebApp.csproj
+++ b/Howest.Movies.WebApp/Howest.Movies.WebApp.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
@@ -13,7 +14,16 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Content Remove="Pages\Weather.razor" />
+      <Content Update="wwwroot\appsettings.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <Content Include="..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Howest.Movies.Sdk\Howest.Movies.Sdk.csproj" />
     </ItemGroup>
 
 </Project>
