Fix files not being created in running folder

--- a/Howest.Movies.WebApi/Howest.Movies.WebApi.csproj
+++ b/Howest.Movies.WebApi/Howest.Movies.WebApi.csproj
@@ -24,6 +24,10 @@
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+      <None Remove="posters\default.jpg" />
+      <Content Include="posters\default.jpg">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
     <ItemGroup>
