--- a/Howest.Movies.WebApi/Dockerfile
+++ b/Howest.Movies.WebApi/Dockerfile
@@ -8,6 +8,10 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Howest.Movies.WebApi/Howest.Movies.WebApi.csproj", "Howest.Movies.WebApi/"]
+COPY ["Howest.Movies.Data/Howest.Movies.Data.csproj", "Howest.Movies.Data/"]
+COPY ["Howest.Movies.Models/Howest.Movies.Models.csproj", "Howest.Movies.Models/"]
+COPY ["Howest.Movies.AccessLayer/Howest.Movies.AccessLayer.csproj", "Howest.Movies.AccessLayer/"]
+COPY ["Howest.Movies.Dtos/Howest.Movies.Dtos.csproj", "Howest.Movies.Dtos/"]
 RUN dotnet restore "Howest.Movies.WebApi/Howest.Movies.WebApi.csproj"
 COPY . .
 WORKDIR "/src/Howest.Movies.WebApi"
