Fixup docker deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,17 @@
 ﻿services:
   db:
+    healthcheck:
+      interval: 10s
+      retries: 3
+      test:
+        [
+          "CMD",
+          "healthcheck.sh",
+          "--su-mysql",
+          "--connect",
+          "--innodb_initialized"
+        ]
+      timeout: 5s
     image: mariadb
     restart: always
     environment:
@@ -9,25 +21,32 @@
       - MARIADB_DATABASE=movies
     volumes:
       - db-mariadb:/var/lib/mysql
-    ports:
-      - 3306:3306
+    expose:
+      - 3306
 
   api:
     build:
       context: .
       dockerfile: Howest.Movies.WebApi/Dockerfile
     depends_on:
-        - db
+      db:
+        condition: service_healthy
     volumes:
       - posters:/app/posters
+      - ./Howest.Movies.WebApi/appsettings.Development.json:/app/appsettings.json
+    ports:
+      - 5000:8080
     
-
   web:
     build:
       context: .
       dockerfile: Howest.Movies.WebApp/Dockerfile
     depends_on:
       - api
+    volumes:
+      - ./Howest.Movies.WebApp/wwwroot/appsettings.Development.json:/usr/share/nginx/html/appsettings.json
+    ports:
+        - 5050:8080
 
 volumes:
   db-mariadb:
