--- a/Howest.Movies.WebApp/Howest.Movies.WebApp.csproj
+++ b/Howest.Movies.WebApp/Howest.Movies.WebApp.csproj
@@ -18,6 +18,9 @@
       <Content Update="wwwroot\appsettings.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
+      <Content Update="wwwroot\appsettings.Development.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
