--- a/Howest.Movies.WebApi/Howest.Movies.WebApi.csproj
+++ b/Howest.Movies.WebApi/Howest.Movies.WebApi.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
         <PackageReference Include="FluentValidation" Version="11.9.0" />
+        <PackageReference Include="Grpc.AspNetCore" Version="2.62.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.4">
@@ -38,6 +39,10 @@
 
     <ItemGroup>
       <Folder Include="Validators\" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Protobuf Include="Protos\movie.proto" GrpcServices="Server" />
     </ItemGroup>
 
 </Project>
