--- a/Howest.Movies.WebApi/Howest.Movies.WebApi.csproj
+++ b/Howest.Movies.WebApi/Howest.Movies.WebApi.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Asp.Versioning.Mvc" Version="8.1.0" />
         <PackageReference Include="FluentValidation" Version="11.9.0" />
         <PackageReference Include="Grpc.AspNetCore" Version="2.62.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
